--- a/bigPipe/BigPipe Web page.html
+++ b/bigPipe/BigPipe Web page.html
@@ -3,13 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BigPipe Web page</title>
+  <title>BigPipe Web Page</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Dark Academia Magazine</h1>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#books">Books</a></li>
+      <li><a href="#style">Style</a></li>
+      <li><a href="#core">Core</a></li>
+      <li><a href="#places">Places</a></li>
+      <li><a href="#movies">Movies</a></li>
+      <li><a href="#news">News</a></li>
+    </ul>
+  </nav>
   <div id="pagelet-container"></div>
   <script src="script.js"></script>
   <?php include "bigpipe.php"; ?>
